[package]
name = "rgb-emu"
version = "0.1.1"
authors = ["Tobias V. Langhoff"]
edition = "2021"
license = "MIT"
description = "Rust Game Boy emulator"
repository = "https://github.com/tobiasvl/rgb"
categories = ["emulators"]

[dependencies]
#winit = "0.29"
clap = { version = "4.4", features = ["derive"] }
sdl2 = "*"
imgui = "*"
#glow = "*"
imgui-sdl2-support = "*"
imgui-sdl2 = "*"
imgui-glow-renderer = "*"